Add a timezone parameter to convert results into a preferred time zone
And fix a timezone issue inside the from/to path variables, where the time zone
was wrongly put away
